[gd_scene load_steps=4 format=3 uid="uid://dn3bfbk078hey"]

[ext_resource type="Script" path="res://ui/hud/dialogue/dialogue_box.gd" id="1_bxmsp"]

[sub_resource type="LabelSettings" id="LabelSettings_8avye"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_p1bry"]

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_bxmsp")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -86.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SpeakerName" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_8avye")
uppercase = true

[node name="DialogueText" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_p1bry")
autowrap_mode = 3

[node name="TextTimer" type="Timer" parent="Panel/MarginContainer"]
wait_time = 0.05
